--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
-  "main": "index.js",
+  "name": "gh-action-beta-version",
+  "version": "0.0.1",
+  "description": "Update the current package version with the build number",
+  "main": "out/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
+    "build": "tsc",
+    "pack": "ncc build dist/index.js -o out --source-map --license licenses.txt",
+    "lint": "eslint src/**/*.ts",
     "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
+    "all": "npm run lint && npm run build && npm run pack"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/estruyf/gh-action-beta-version.git"
   },
   "keywords": [
     "GitHub",
     "Actions",
     "JavaScript"
   ],
-  "author": "",
+  "author": {
+    "name": "Elio Struyf",
+    "email": "elio@struyfconsulting.be",
+    "url": "https://github.com/estruyf"
+  },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/estruyf/gh-action-beta-version/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/estruyf/gh-action-beta-version#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.9.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "@vercel/ncc": "^0.34.0",
     "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "jest": "^27.2.5",
+    "typescript": "^4.8.2"
   }
 }
