--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
           ref: ${{ github.event.release.tag_name }}
           
       - name: Install deps and build
-        run: npm ci && npm run build
+        run: npm ci && npm run all
 
       # Compile dist/index.js and bundle with action.yml
       # Force push major and minor tags, e.g. v1, v1.0
