--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "out/index.js",
   "scripts": {
     "build": "tsc",
-    "pack": "ncc build dist/index.js -o out --source-map --license licenses.txt",
+    "pack": "ncc build dist/index.js -o out",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
     "all": "npm run lint && npm run build && npm run pack"
