--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,9 @@ jobs:
       - uses: ./
         id: updater
         with:
-          build-id: ${{ github.run_id }}
+          build-id: '-beta.${{ github.run_id }}'
           path: 'package.json'
+          append-or-replace: 'append'
           preview: true
           name: 'dummy-name'
           display-name: 'Dummy package name'
